# Cobots_collision_avoidance

./: CMakeList.txt  CMakeLists.txt  README.md  cleanup.sh  package.xml  setup.py  test_robot.xacro
config/: collision_avoidance_params.yaml
install/: local_setup.sh  setup.ps1  setup.sh
install/ur5e_collision_avoidance/lib/ur5e_collision_avoidance/: scenario_orchestrator.py
install/ur5e_collision_avoidance/local/lib/python3.10/dist-packages/ur5e_collision_avoidance/: __init__.py
install/ur5e_collision_avoidance/local/lib/python3.10/dist-packages/ur5e_collision_avoidance-1.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/ur5e_collision_avoidance/local/lib/python3.10/dist-packages/ur5e_collision_avoidance/scripts/: collision_monitor.py  robot1_controller.py  robot2_controller.py  setup.py
install/ur5e_collision_avoidance/share/ament_index/resource_index/package_run_dependencies/: ur5e_collision_avoidance
install/ur5e_collision_avoidance/share/ament_index/resource_index/parent_prefix_path/: ur5e_collision_avoidance
install/ur5e_collision_avoidance/share/ur5e_collision_avoidance/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur5e_collision_avoidance/share/ur5e_collision_avoidance/cmake/: ur5e_collision_avoidanceConfig-version.cmake  ur5e_collision_avoidanceConfig.cmake
install/ur5e_collision_avoidance/share/ur5e_collision_avoidance/config/: collision_avoidance_params.yaml  dual_ur5e_controllers.yaml
install/ur5e_collision_avoidance/share/ur5e_collision_avoidance/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/ur5e_collision_avoidance/share/ur5e_collision_avoidance/launch/: simulation.launch.py  visualize.launch.py
install/ur5e_collision_avoidance/share/ur5e_collision_avoidance/launch/install/: .colcon_install_layout  COLCON_IGNORE  _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ur5e_collision_avoidance/share/ur5e_collision_avoidance/launch/log/: COLCON_IGNORE
install/ur5e_collision_avoidance/share/ur5e_collision_avoidance/rviz/: dual_ur5e.rviz
install/ur5e_collision_avoidance/share/ur5e_collision_avoidance/urdf/: dual_ur5e.urdf.xacro
install/ur5e_collision_avoidance/share/ur5e_collision_avoidance/worlds/: ur5e_workspace.world
launch/: simulation.launch.py  visualize.launch.py
launch/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
launch/log/: latest_build
log/: latest_build
rviz/: dual_ur5e.rviz  ur5e_simulator.html  web_server.py
src/resource/: README.md
src/scripts/: collision_monitor.py  robot1_controller.py  scenario_orchestrator.py  web_server.py
src/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/scripts/log/: latest_build
src/ur5e_collision_avoidance/: CMakeLists.txt  setup.py
src/ur5e_collision_avoidance/config/: collision_avoidance_params.yaml  dual_ur5e_controllers.yaml
src/ur5e_collision_avoidance/launch/: simulation.launch.py
src/ur5e_collision_avoidance/urdf/: dual_ur5e.urdf.xacro
src/ur5e_collision_avoidance/worlds/: ur5e_workspace.world
ur5e_collision_avoidance/scripts/: collision_monitor.py  robot2_controller.py  scenario_orchestrator.py  setup.py
urdf/: dual_ur5e.urdf.xacro
